--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,28 +41,28 @@
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
 
-        <!-- <div class="site-nav">
+        <div class="site-nav">
           <nav>
             <ul class = "page-link">
               <li><a href="{{ "/" | absolute_url }}"> <h3> HOME </h3> </a></li>
-              <li><a href="{{"/blog_index.html" | prepend: site.baseurl}}"> <h3> BLOG </h3> </a></li>
+              <li><a href="{{"/blog_index.html" | prepend: site.baseurl|absolute_url}}"> <h3> BLOG </h3> </a></li>
               <li><a href="{{"/project_index.html" | prepend:site.baseurl}}"> <h3> PROJECT </h3> </a></li>
               <li><a href="{{"/about.md" | prepend:site.baseurl}}"> <h3> ABOUT </h3> </a></li>
             </ul>
           </nav>
-        </div> -->
-        <p class="view"><a href="{{ "/" | absolute_url }}"> <h3> HOME </h3> </a></p>
-        <p class="view"><a href="{{"/about.md" | prepend: site.baseurl }}"> <h3> ABOUT </h3> </a></p>
+        </div>
+        <!-- <p class="view"><a href="{{ "/" | absolute_url }}"> <h3> HOME </h3> </a></p>
+        <p class="view"><a href="{{"/about.md" | prepend: site.baseurl}}"> <h3> ABOUT </h3> </a></p>
         {% if site.blog %}
         <p class="view"><a href="{{"/blog_index.html" | prepend: site.baseurl}}"> <h3> BLOG </h3> </a></p>
         {% endif %}
         {% if site.project %}
         <p class="view"><a href="{{"/project_index.html" | prepend:site.baseurl}}"> <h3> PROJECT </h3> </a></p>
-        {% endif %}
-
-<!--         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %} -->
+
+        {% if site.github.is_user_page %}
+        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+        {% endif %}
 
         {% if site.show_downloads %}
         <ul class="downloads">
