move about to about

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
         {% endif %}
         <br><br>
 
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1 ><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
         <br>
@@ -46,7 +46,7 @@
             <ul class = "page-link">
               <li><a href="{{"/blog_index.html" | prepend: site.baseurl|absolute_url}}"> <h3> BLOG </h3> </a></li>
               <li><a href="{{"/project_index.html" | prepend:site.baseurl}}"> <h3> PROJECT </h3> </a></li>
-              <li><a href="{{"/about.md" | prepend:site.baseurl}}"> <h3> ABOUT </h3> </a></li>
+              <li><a href="{{"/about.html" | prepend:site.baseurl}}"> <h3> ABOUT </h3> </a></li>
             </ul>
           </nav>
         </div>
