change the index

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
             <ul class = "page-link">
               <li><a href="{{"/blog_index.html" | prepend: site.baseurl|absolute_url}}"> <h3> BLOG </h3> </a></li>
               <li><a href="{{"/project_index.html" | prepend:site.baseurl|absolute_url}}"> <h3> PROJECT </h3> </a></li>
-              <li><a href="{{"/about.html" | prepend:site.baseurl|absolute_url}}"> <h3> ABOUT </h3> </a></li>
+              <li><a href="{{"/index.html" | prepend:site.baseurl|absolute_url}}"> <h3> ABOUT </h3> </a></li>
             </ul>
           </nav>
         </div>
