--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,7 +1,18 @@
-<figure>
-   <a href="{{ include.url }}">
-   <img src="{{ include.file }}" style="max-width: {{ include.max-width }};"
-      alt="{{ include.alt }}"/>
-   </a>
-   <figcaption>{{ include.caption }}</figcaption>
-</figure>
+<div class = "two-col-image">
+  <figure style = "floating: left;">
+     <a href="{{ include.url }}">
+     <img src="{{ include.file }}" style="width: 50%;"
+        alt="{{ include.alt }}"/>
+     </a>
+     <figcaption>{{ include.caption }}</figcaption>
+  </figure>
+
+  <figure style = "floating: left;">
+     <a href="{{ include.url }}">
+     <img src="{{ include.file }}" style="width: 50%;"
+        alt="{{ include.alt }}"/>
+     </a>
+     <figcaption>{{ include.caption }}</figcaption>
+  </figure>
+
+</div>
