--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -43,4 +43,18 @@ body{
     }
   }
 
+  //for image grid: 2 columns
+  /* Three image containers (use 25% for four, and 50% for two, etc) */
+  .column {
+  float: left;
+  width: 40%;
+  padding: 5px;
+  }
+
+  /* Clear floats after image containers */
+  .row::after {
+  content: "";
+  clear: both;
+  display: table;
+  }
 }
