--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: base
 ---
 
 <!-- scripts to enable mathJax in the .md file (kramdown) -->
@@ -7,11 +7,16 @@ layout: default
   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
 </script>
 
-<h1 class = "article-title">{{page.title}}</h1>
-<!-- <p>{{ page.date }} </p> -->
-<p class="artilce_meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
-
+<div>
+  <h1 class = "article-title" >{{page.title}}</h1>
+  <!-- <p>{{ page.date }} </p> -->
+    <a href = "/"> Back to Homepage 🍬 </a>
+</div>
 
 <div class = "article-content">
   {{ content }}
+</div>
+
+<div>
+  <p class="article-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
 </div>
