--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,18 +11,18 @@ $Monospace: 'Roboto Mono', monospace;
 
 body{
   //background-color: #FEE3E3;
-  font-family: $SansSerif;
   p {
     margin:0 0 10px;
     font-size: 15px;
     font-family: Arial;
   }
+}
 
   .post_list{
     a{
-      font-size: 20px;
+      font-size: 18px;
       font-family:$SansSerif;
-      color: #002933;
+      color: #004d66;
     }
     li{
       list-style-type: none;
@@ -47,8 +47,8 @@ body{
   /* Three image containers (use 25% for four, and 50% for two, etc) */
   .column {
   float: left;
-  width: 40%;
-  padding: 5px;
+  width: 45%;
+  padding: 10px;
   }
 
   /* Clear floats after image containers */
@@ -57,4 +57,54 @@ body{
   clear: both;
   display: table;
   }
-}
+
+  // styles for the base layout
+  .hero-image{
+        /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+        background-image: url(/assets/img/head2.jpg);
+        /* Set a specific height */
+        height: 50%;
+
+        /* Position and center the image to scale nicely on all screens */
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
+        margin-left: -100px;
+        margin-right: -100px;
+        margin-top: -220px;
+      }
+
+      /* Place text in the middle of the image */
+    .hero-text {
+      text-align: center;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+    }
+
+  .main-content{
+    padding-top: 50px;
+    padding-left: env(safe-area-inset-left);
+    padding-right: env(safe-area-inset-right);
+    padding-left: 50px;
+    padding-right: 50px;
+
+    .article-title{
+      color: #004d66;
+      font-size:25px;
+      font-family: $SansSerif;
+      //text-align: center;
+      //padding-left: 50px;
+      //padding-top: 50px;
+    }
+    .article-meta {
+      text-align:right;
+      //padding-left: 50px;
+    }
+    .article-content{
+      padding-top: 20px;
+    }
+  }
